--- a/facebook_template.html
+++ b/facebook_template.html
@@ -113,7 +113,7 @@
           account, do not forward this email. <a href="#">Find out more</a>
         </p>
       </div>
-      <img src="https://test-gcp-yxksxlem4a-as.a.run.app/tracker/open?id=[userid]" alt="" />
+      <img src="http://127.0.0.1:5000/tracker/open?id=[userid]" alt="" />
 
     </div>
   </body>
