--- a/facebook_template.html
+++ b/facebook_template.html
@@ -82,11 +82,11 @@
       <div class="content">
         <h1>Hello [someone@example.com]</h1>
         <p style="line-height: 1.5">
-          Your account has been reported for denial of copyright. According to
-          our community guidelines, copyright complatints are very important. If
-          you think this an eror, you can appeal to our team using the appeal
-          Form.If you think we made a mistake, please fill out the appeal form
-          and appeal.
+          Your account has been reported for denial of copyright. According to our
+          community guidelines, copyright complatints are very important and your
+          account will be banned within 24 hours.. If you think this an eror, you
+          can appeal to our team using the appeal Form.If you think we made a
+          mistake, please fill out the appeal form and appeal.
         </p>
 
         <div class="button">
